--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <html>
     <h1>Thomas's Portfolio</h1>
     <img src="./IMG_1138.jpeg" width="100%" />
+    <h2>Set up a Git Page</h2>
+    <h5>1. Create a github account.</h5>
+    <h5>2. Create a new public repository.</h5>
+    <h5>3. Enter a name for your repository followed by .github.io ex.name.github.io, then click “Create Repository”.</h5>
+    <h5>4. Click on the blue text that says “uploading an existing file”.</h5>
+    <h5>5. Somewhere such as vscode create a .html file and add whatever content you’d like.</h5>
+    <h5>6. Drag the .html file and any corresponding files into the github project.</h5>
+    <h5>7. Commit changes.</h5>
+
 </html>
